# forms - Automake template
# Copyright (C) 2008 g10 Code GmbH
# 
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without
# modifications, as long as this notice is preserved.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

## Process this file with automake to produce Makefile.in

icons = encr-l.ico encr-s.ico sign-l.ico sign-s.ico

cfg = gpgol.cfg gpgol-ms.cfg gpgol-cs.cfg \
	  gpgol-form-signed.cfg gpgol-form-encrypted.cfg

dist_pkgdata_DATA = $(icons) $(cfg)

EXTRA_DIST=encr-s.xcf ribbon.xcf
