# Makefile.am - makefile for GPGol icons
# Copyright (C) 2016 Intevation GmbH
#
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without
# modifications, as long as this notice is preserved.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

## Process this file with automake to produce Makefile.in
EXTRA_DIST= \
    encrypt-16.bmp encrypt-16m.bmp \
    sign-16.bmp sign-16m.bmp \
    key-manager-16.bmp key-manager-16m.bmp \
    decrypt-16.bmp decrypt-16m.bmp \
    verify-16.bmp  verify-16m.bmp \
    decrypt-verify-16.bmp decrypt-verify-16m.bmp \
    encrypt-16.png encrypt-48.png \
    key-manager-64.png \
    decrypt-16.png decrypt-48.png \
    encrypt-sign-file-48.png \
    sign-48.png verify-48.png \
    README.icons\
    emblem-question-64.png \
    emblem-warning-64.png \
    emblem-success-64.png \
    emblem-information-64.png
